# eventdispatcher3

./: .gitignore  README.md  example.py  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
eventdispatcher/: __init__.py  clock.py  dictproperty.py  eventdispatcher.py  exceptions.py  json_map.py  limitproperty.py  listproperty.py  optionproperty.py  property.py  scheduledevent.py  setproperty.py  stringproperty.py  unitproperty.py  weakrefproperty.py
