[metadata]
name = eventdispatcher3
version = attr: eventdispatcher.version.__version__
author = Calvin Lobo
author_email = calvinvlobo@gmail.com
maintainer=Pol Canelles
maintainer_email=canellestudi@gmail.com
url = https://github.com/opacam/eventdispatcher3
description = An event dispatcher framework inspired by the Kivy project.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = event, dispatcher, dispatching, kivy, observer, framework, property, properties
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = eventdispatcher
zip_safe = True
include_package_data = True
python_requires = >=3.6
install_requires =
    future
    numpy

[options.extras_require]
dev =
    pytest

[options.package_data]
* = README.md
